# amm-workshop

./: .gitignore
math/: Cargo.toml
math/src/: lib.rs
math/src/xyk/: invariants.rs  math.rs  mod.rs  tests.rs
pallet-amm/: Cargo.toml
pallet-amm/src/: lib.rs  mock.rs  traits.rs  weights.rs
pallet-amm/src/tests/: create.rs  liquidity.rs  math.rs  mod.rs  swap.rs
