[package]
name = "math"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
primitive-types = {default-features = false, version = '0.12.0'}
num-traits = {default-features = false, version = "0.2.14"}
fixed = "=1.15.0"
sp-arithmetic = { git = "https://github.com/paritytech/substrate", branch="polkadot-v0.9.29", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch="polkadot-v0.9.29", default-features = false }

[dev-dependencies]
approx = "0.5.1"
proptest = "1.0.0"
test-case = "2.2.1"

[features]
default = ["std"]
std = ["sp-arithmetic/std"]
runtime-benchmarks = []

